[package]
name = "apirunner"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.21"
fastrand = "2.0"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
libloading = "0.8"
notify = "6.0"
sled = "0.34"
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
hyper = { version = "0.14", features = ["full"] }
rustls = "0.21"
rustls-pemfile = "1.0"
log = "0.4"
csv = "1.3"
serde_yaml = "0.9"
toml = "0.8"
jsonpath-rust = "0.3"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "mysql", "sqlite", "chrono", "uuid"] }
regex = "1.0"
roxmltree = "0.19"
quick-xml = { version = "0.31", features = ["serialize"] }
handlebars = "4.5"
indicatif = "0.17"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1.6", features = ["zeroize_derive"] }
keyring = "2.0"
prometheus = "0.13"
sysinfo = "0.29"
parking_lot = "0.12"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"

[dev-dependencies]
tempfile = "3.0"
proptest = "1.4"
mockall = "0.12"
wiremock = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }
test-case = "3.3"
rstest = "0.18"
tokio-test = "0.4"
serial_test = "3.0"
warp = "0.3"
